[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/leaderboard/leaderboard.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/large.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.231373, 0.196078, 0.196078, 0.482353 )

[node name="Leaderboard" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -135.0
margin_right = 126.0
margin_bottom = 136.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.117647, 0.160784, 0.552941 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 241.0
margin_bottom = 261.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Leadboard"
align = 1
valign = 1

[node name="EntryContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 241.0
margin_bottom = 209.0
size_flags_vertical = 3

[node name="SubmitBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 241.0
margin_bottom = 237.0

[node name="Username" type="LineEdit" parent="MarginContainer/VBoxContainer/SubmitBox"]
margin_right = 192.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
align = 1
max_length = 20
placeholder_text = "Player"

[node name="Submit" type="Button" parent="MarginContainer/VBoxContainer/SubmitBox"]
margin_left = 196.0
margin_right = 241.0
margin_bottom = 24.0
rect_min_size = Vector2( 45, 0 )
focus_mode = 0
text = "Submit"

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 241.0
margin_bottom = 261.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 0
text = "Continue"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/SubmitBox/Username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SubmitBox/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
